--- a/pom.xml
+++ b/pom.xml
@@ -1,75 +1,129 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.mycompany.app</groupId>
-  <artifactId>my-app</artifactId>
-  <version>1.0-SNAPSHOT</version>
+	<groupId>com.martijndashorst.jpa-model-obfuscator</groupId>
+	<artifactId>jpa-model-obfuscator</artifactId>
+	<version>0.1</version>
 
-  <name>my-app</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+	<name>JPA Model Obfuscator</name>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-  </properties>
+	<properties>
+		<junit.jupiter.version>5.8.1</junit.jupiter.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>8</maven.compiler.source>
+		<maven.compiler.target>8</maven.compiler.target>
+	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<!-- rewrite-java depedencies only necessary for Java Recipe development -->
+			<dependency>
+				<groupId>org.openrewrite</groupId>
+				<artifactId>rewrite-java</artifactId>
+				<version>7.16.0</version>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.openrewrite</groupId>
+				<artifactId>rewrite-java-8</artifactId>
+				<version>7.16.0</version>
+				<scope>runtime</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.openrewrite</groupId>
+				<artifactId>rewrite-java-11</artifactId>
+				<version>7.16.0</version>
+				<scope>runtime</scope>
+			</dependency>
 
-  <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.7.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+			<!-- rewrite-maven dependency only necessary for Maven Recipe development -->
+			<dependency>
+				<groupId>org.openrewrite</groupId>
+				<artifactId>rewrite-maven</artifactId>
+				<version>7.16.0</version>
+				<scope>compile</scope>
+			</dependency>
+
+			<!-- rewrite-yaml dependency only necessary for Yaml Recipe development -->
+			<dependency>
+				<groupId>org.openrewrite</groupId>
+				<artifactId>rewrite-yaml</artifactId>
+				<version>7.16.0</version>
+				<scope>compile</scope>
+			</dependency>
+
+			<!-- rewrite-properties dependency only necessary for Properties Recipe 
+				development -->
+			<dependency>
+				<groupId>org.openrewrite</groupId>
+				<artifactId>rewrite-properties</artifactId>
+				<version>7.16.0</version>
+				<scope>compile</scope>
+			</dependency>
+
+			<!-- rewrite-xml dependency only necessary for XML Recipe development -->
+			<dependency>
+				<groupId>org.openrewrite</groupId>
+				<artifactId>rewrite-xml</artifactId>
+				<version>7.16.0</version>
+				<scope>compile</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter-engine</artifactId>
+				<version>${junit.jupiter.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<!-- For authoring tests for any kind of Recipe -->
+			<dependency>
+				<groupId>org.openrewrite</groupId>
+				<artifactId>rewrite-test</artifactId>
+				<version>7.16.0</version>
+				<scope>test</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	<dependencies>
+		<dependency>
+			<groupId>org.openrewrite</groupId>
+			<artifactId>rewrite-java</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.openrewrite</groupId>
+			<artifactId>rewrite-java-8</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.openrewrite</groupId>
+			<artifactId>rewrite-java-11</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.openrewrite</groupId>
+			<artifactId>rewrite-maven</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.openrewrite</groupId>
+			<artifactId>rewrite-yaml</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.openrewrite</groupId>
+			<artifactId>rewrite-properties</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.openrewrite</groupId>
+			<artifactId>rewrite-xml</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.openrewrite</groupId>
+			<artifactId>rewrite-test</artifactId>
+		</dependency>
+	</dependencies>
 </project>
